--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -96,6 +96,8 @@ ul {
   background-color: #00ffff;
   cursor: pointer;
   font-weight: 700;
+  border: none;
+  box-shadow: 0px 0px 22px 1px cyan;
 }
 
 /* PAGE2 */
