--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -122,6 +122,7 @@ ul {
   font-size: 50px;
   color: white;
   font-family: "outfit", sans-serif;
+  margin-bottom: 70px;
 }
 
 .inputpg2 {
@@ -154,6 +155,26 @@ ul {
   align-content: stretch;
   font-weight: bold;
   font-size: 20px;
+}
+
+#next-question-btn {
+  color: white;
+  border: solid white;
+  padding-inline: 10px;
+  margin: 10px;
+  border: solid 3px;
+  padding: 10px;
+  transition-duration: 0.3s;
+  cursor: pointer;
+  background-color: #ffffff33;
+  font-family: "Outfit", sans-serif;
+  margin-inline: 10px;
+  border-style: outset;
+  width: 20%;
+  margin-left: 80%;
+}
+#next-question-btn:hover {
+  background-color: rgba(77, 9, 77, 0.192);
 }
 
 /* ____________________TIMER PIE CSS________________________________ */
