--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -352,3 +352,11 @@ ul {
   border: 3px solid white;
   box-shadow: 0px 0px 10px 0.5px #00ffff78;
 }
+
+#question-counter {
+  color: rgb(253 121 255);
+  text-align: center;
+  font-family: "Outfit", sans-serif;
+  font-weight: 400;
+  text-decoration: overline;
+}
