--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,7 +14,7 @@ header {
 }
 
 #logosvg {
-  width: 130px;
+  width: 15rem;
   padding-top: 2rem;
   padding-bottom: 4rem;
 }
@@ -102,6 +102,12 @@ ul {
   font-weight: 700;
   border: none;
   box-shadow: 0px 0px 22px 1px cyan;
+}
+
+.attemptions {
+  color: #ff00b3;
+  font-family: "Outfit", sans-serif;
+  font-weight: 700;
 }
 
 /* PAGE2 */
@@ -371,6 +377,9 @@ ul {
   font-family: "Outfit", sans-serif;
   font-weight: 400;
   text-decoration: overline;
+}
+
+.checkbox {
   width: 26px;
   height: 25px;
   border: 2px solid violet;
