--- a/assets/css/feed.css
+++ b/assets/css/feed.css
@@ -38,6 +38,12 @@ button {
   color: #0b113b;
   border: none;
   box-shadow: 0px 0px 22px 1px cyan;
+  transition-duration: 0.5s;
+}
+
+button:hover {
+  background-color: #c2128d;
+  box-shadow: 0px 0px 22px 1px #c2128d;
 }
 
 button a {
@@ -68,6 +74,9 @@ p {
   padding-left: 20px;
   padding-bottom: 7px;
   font-size: 16px;
+  color: white;
+  outline: none;
+  font-family: "Outfit", sans-serif;
 }
 
 .star {
